added table tag

--- a/index.html
+++ b/index.html
@@ -20,8 +20,32 @@
         <section>
             <h2>Le mie spese</h2>
             <table>
-
+                <thead>
+                    <th>Numero</th>
+                    <th>Descrizione</th>
+                    <th>Costo</th>
+                </thead>
+                <tbody>
+                    <td>1</td>
+                    <td>Biglietto Aereo</td>
+                    <td>120&euro;</td>
+                </tbody>                
+                <tbody>
+                    <td>1</td>
+                    <td>Biglietto Aereo</td>
+                    <td>120&euro;</td>
+                </tbody>
+                <tbody>
+                    <td>1</td>
+                    <td>Biglietto Aereo</td>
+                    <td>120&euro;</td>
+                </tbody>
+                <tfoot>
+                    <td colspan="2">Totale</td>
+                    <td>360&euro;</td>
+                </tfoot>
             </table>
+            <hr>
         </section>
         <section>
             <h2>Cose da fare</h2>
@@ -30,8 +54,9 @@
             <h2>info utili</h2>
         </section>
     </main>
+    <!-- inizio footer -->
     <footer>
-        
+
     </footer>
 </body>
 </html>
