add ul list to second section

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <!-- inizio header -->
     <header>
         <h1>Il mio Viaggio a Londra</h1>
-        <img src="img/pexels-bill-emrich-230794-0.jpg" alt="panoramica londra">
-        <img src="img/pexels-bill-emrich-230794-1.jpg" alt="panoramica londra">
-        <img src="img/pexels-bill-emrich-230794-2.jpg" alt="panoramica londra">
+        <img src="img/pexels-bill-emrich-230794-0.jpg" alt="London panoramic">
+        <img src="img/pexels-bill-emrich-230794-1.jpg" alt="London panoramic">
+        <img src="img/pexels-bill-emrich-230794-2.jpg" alt="London panoramic">
         <hr>
     </header>
     <!-- inizio main -->
@@ -49,6 +49,13 @@
         </section>
         <section>
             <h2>Cose da fare</h2>
+            <ul>
+                <li>Visitare la Tower of London&cross;</li>
+                <li>Visitare greenwich&check;</li>
+                <li>Ascoltare un artista di strada a Covent Garden&check;</li>
+                <li>Mangiare il tipico Fish and Chips inglese&cross;</li>
+            </ul>
+            <hr>
         </section>
         <section>
             <h2>info utili</h2>
