--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </header>
     <!-- inizio main -->
     <main>
-        <!-- inizio section -->
+        <!-- inizio section 1 -->
         <section>
             <h2>Le mie spese</h2>
             <table>
@@ -47,18 +47,39 @@
             </table>
             <hr>
         </section>
+        <!-- inizio section 2 -->
         <section>
             <h2>Cose da fare</h2>
             <ul>
-                <li>Visitare la Tower of London&cross;</li>
-                <li>Visitare greenwich&check;</li>
-                <li>Ascoltare un artista di strada a Covent Garden&check;</li>
-                <li>Mangiare il tipico Fish and Chips inglese&cross;</li>
+                <li>Visitare la Tower of London &cross;</li>
+                <li>Visitare greenwich &check;</li>
+                <li>Ascoltare un artista di strada a Covent Garden &check;</li>
+                <li>Mangiare il tipico Fish and Chips inglese &cross;</li>
             </ul>
             <hr>
         </section>
+        <!-- inizio section 3 -->
         <section>
             <h2>info utili</h2>
+            <ol>
+                <li>Numeri utili di emergenza</li>
+                    <ul>
+                        <li><strong>999</strong> - Emergenza</li>
+                        <li><strong>101</strong> - Numero polizia</li>
+                        <li><strong>111</strong> - Numero assistenza medica</li>
+                    </ul>
+                <li>Hotel</li>
+                    <ul>
+                        <li><strong>Nome hotel:</strong> Buckingham Palace</li>
+                        <li><strong>Indirizzo hotel:</strong> Westminster, London SW1A 1AA, Regno Unito</li>
+                    </ul>
+                <li>Aereo</li>
+                    <ul>
+                        <li><strong>Volo di Andata:</strong> Y1234X, ore 9:30 da Milano Malpensa</li>
+                        <li><strong>Volo di Ritorno:</strong> Y1236X, ore 18:30 da London Heathrow</li>
+                    </ul>
+            </ol>
+            <hr>
         </section>
     </main>
     <!-- inizio footer -->
