add comment and diplay the immage with no space

--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
     <!-- inizio header -->
     <header>
         <h1>Il mio Viaggio a Londra</h1>
-        <img src="img/pexels-bill-emrich-230794-0.jpg" alt="London panoramic">
-        <img src="img/pexels-bill-emrich-230794-1.jpg" alt="London panoramic">
-        <img src="img/pexels-bill-emrich-230794-2.jpg" alt="London panoramic">
+        <span><img src="img/pexels-bill-emrich-230794-0.jpg" alt="London panoramic"></span><span><img src="img/pexels-bill-emrich-230794-1.jpg" alt="London panoramic"></span><span><img src="img/pexels-bill-emrich-230794-2.jpg" alt="London panoramic"></span>
+        <!-- orribile da vedere ma è una valida soluzione se non si può usare CSS -->
         <hr>
     </header>
     <!-- inizio main -->
@@ -85,7 +84,7 @@
     <!-- inizio footer -->
     <footer>
         <h2>Le foto</h2>
-        <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg" alt="">
+        <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg" alt="Millennium bridge">
         <img src="https://imgc.allpostersimages.com/img/posters/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg?artPerspective=n" alt="Tower bridge">
     </footer>
 </body>
