--- a/index.html
+++ b/index.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Il mio Viaggio a Londra</title>
 </head>
+
 <body>
     <!-- inizio header -->
     <header>
         <h1>Il mio Viaggio a Londra</h1>
-        <span><img src="img/pexels-bill-emrich-230794-0.jpg" alt="London panoramic"></span><span><img src="img/pexels-bill-emrich-230794-1.jpg" alt="London panoramic"></span><span><img src="img/pexels-bill-emrich-230794-2.jpg" alt="London panoramic"></span>
+        <!-- correzione esercizio: conviene inserire le immagini in un tag DIV per contenere le 3 immagini -->
+        <span><img src="img/pexels-bill-emrich-230794-0.jpg" alt="London panoramic"></span><span><img
+                src="img/pexels-bill-emrich-230794-1.jpg" alt="London panoramic"></span><span><img
+                src="img/pexels-bill-emrich-230794-2.jpg" alt="London panoramic"></span>
         <!-- orribile da vedere ma è una valida soluzione se non si può usare CSS -->
         <hr>
     </header>
@@ -20,35 +25,45 @@
             <h2>Le mie spese</h2>
             <table>
                 <thead>
-                    <th>Numero</th>
-                    <th>Descrizione</th>
-                    <th>Costo</th>
+                    <tr> <!-- Correzzione esercizio: inserire tr prima di sviluppare la tabella -->
+                        <th>Numero</th>
+                        <th>Descrizione</th>
+                        <th>Costo</th>
+                    </tr>
                 </thead>
                 <tbody>
-                    <td>1</td>
-                    <td>Biglietto Aereo</td>
-                    <td>120&euro;</td>
-                </tbody>                
+                    <tr> <!-- Correzzione esercizio: inserire tr prima di sviluppare la tabella -->
+                        <td>1</td>
+                        <td>Biglietto Aereo</td>
+                        <td>120&euro;</td>
+                    </tr>
+                    </tbody>
                 <tbody>
-                    <td>1</td>
-                    <td>Biglietto Aereo</td>
-                    <td>120&euro;</td>
-                </tbody>
+                    <tr> <!-- Correzzione esercizio: inserire tr prima di sviluppare la tabella -->
+                        <td>1</td>
+                        <td>Biglietto Aereo</td>
+                        <td>120&euro;</td>
+                    </tr>
+                    </tbody>
                 <tbody>
-                    <td>1</td>
-                    <td>Biglietto Aereo</td>
-                    <td>120&euro;</td>
+                    <tr> <!-- Correzzione esercizio: inserire tr prima di sviluppare la tabella -->
+                        <td>1</td>
+                        <td>Biglietto Aereo</td>
+                        <td>120&euro;</td>
+                    </tr>
                 </tbody>
                 <tfoot>
-                    <td colspan="2">Totale</td>
-                    <td>360&euro;</td>
+                    <tr>
+                        <td colspan="2">Totale</td>
+                        <td>360&euro;</td>
+                    </tr>
                 </tfoot>
             </table>
             <hr>
         </section>
         <!-- inizio section 2 -->
         <section>
-            <h2>Cose da fare</h2>
+            <h2>Cose da fare</h2> <!-- meglio utilizzare un tag h3 che è meno importante -->
             <ul>
                 <li>Visitare la Tower of London &cross;</li>
                 <li>Visitare greenwich &check;</li>
@@ -59,24 +74,36 @@
         </section>
         <!-- inizio section 3 -->
         <section>
-            <h2>info utili</h2>
+            <h2>info utili</h2> <!-- meglio utilizzare un tag h3 che è meno importante -->
             <ol>
-                <li>Numeri utili di emergenza</li>
-                    <ul>
+                <li>
+                    <span>Numeri utili di emergenza</span> <!-- Correzione esercizio: conviene sempre usare tag <span> per determinare del testo che -->
+                </li>    
+                <li>                                                     
+                    <ul> <!-- Correzione esercizio: usare sempre un tag <li> all'interno di un tag <ol> -->
                         <li><strong>999</strong> - Emergenza</li>
                         <li><strong>101</strong> - Numero polizia</li>
                         <li><strong>111</strong> - Numero assistenza medica</li>
                     </ul>
-                <li>Hotel</li>
+                </li>
+                <li>
+                    <span>Hotel</span>
+                </li>
+                <li>
                     <ul>
                         <li><strong>Nome hotel:</strong> Buckingham Palace</li>
                         <li><strong>Indirizzo hotel:</strong> Westminster, London SW1A 1AA, Regno Unito</li>
                     </ul>
-                <li>Aereo</li>
+                </li>
+                <li>
+                    <span>Aereo</span>
+                </li>
+                <li>
                     <ul>
                         <li><strong>Volo di Andata:</strong> Y1234X, ore 9:30 da Milano Malpensa</li>
                         <li><strong>Volo di Ritorno:</strong> Y1236X, ore 18:30 da London Heathrow</li>
                     </ul>
+                </li>
             </ol>
             <hr>
         </section>
@@ -84,8 +111,13 @@
     <!-- inizio footer -->
     <footer>
         <h2>Le foto</h2>
-        <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg" alt="Millennium bridge">
-        <img src="https://imgc.allpostersimages.com/img/posters/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg?artPerspective=n" alt="Tower bridge">
-    </footer>
+        <div> <!-- Correzione esercizio: conviene sempre raggruppare le immagini in un tag <div> -->
+            <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg"
+            alt="Millennium bridge">
+            <img src="https://imgc.allpostersimages.com/img/posters/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg?artPerspective=n"
+            alt="Tower bridge">
+        </div>
+        </footer>
 </body>
+
 </html>
