--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
     <header>
         <h1>Il mio Viaggio a Londra</h1>
         <!-- correzione esercizio: conviene inserire le immagini in un tag DIV per contenere le 3 immagini -->
-        <span><img src="img/pexels-bill-emrich-230794-0.jpg" alt="London panoramic"></span><span><img
+        <div>
+            <span><img src="img/pexels-bill-emrich-230794-0.jpg" alt="London panoramic"></span><span><img
                 src="img/pexels-bill-emrich-230794-1.jpg" alt="London panoramic"></span><span><img
                 src="img/pexels-bill-emrich-230794-2.jpg" alt="London panoramic"></span>
+        </div>
         <!-- orribile da vedere ma è una valida soluzione se non si può usare CSS -->
         <hr>
     </header>
